--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ca.qc.cegep_heritage.mhaley_a03_hangman.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_options"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_options"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="200"
+        android:title="@string/action_about"
         app:showAsAction="never" />
 </menu>
