--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="options_label_marginStart">40dp</dimen>
+    <dimen name="options_label_marginTop">60dp</dimen>
+    <dimen name="options_editText_width">67dp</dimen>
 </resources>
