--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/layOptions"
     tools:context="ca.qc.cegep_heritage.mhaley_a03_hangman.OptionsActivity">
 
     <RadioGroup
