--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <dimen name="options_label_marginStart">40dp</dimen>
     <dimen name="options_label_marginTop">60dp</dimen>
     <dimen name="options_editText_width">67dp</dimen>
+    <dimen name="game_land_hangman_scale">1</dimen>
 </resources>
