--- a/app/src/main/res/layout-land/activity_options.xml
+++ b/app/src/main/res/layout-land/activity_options.xml
@@ -2,17 +2,18 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layOptions"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/layOptions"
-    tools:context="ca.qc.cegep_heritage.mhaley_a03_hangman.OptionsActivity">
+    tools:context="ca.qc.cegep_heritage.mhaley_a03_hangman.OptionsActivity"
+    tools:layout_editor_absoluteY="73dp">
 
     <RadioGroup
         android:id="@+id/rdoGrpDifficulty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintStart_toEndOf="@+id/txtDifficulty"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -40,8 +41,8 @@
         android:id="@+id/txtDifficulty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/options_label_marginStart"
-        android:layout_marginTop="@dimen/options_label_marginTop"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="68dp"
         android:text="@string/label_difficulty"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,11 +52,11 @@
         android:id="@+id/txtMinLength"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/options_label_marginStart"
-        android:layout_marginTop="@dimen/options_label_marginTop"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="56dp"
+        android:labelFor="@id/edtxtMinLength"
         android:text="@string/label_minimum_letters"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        android:labelFor="@id/edtxtMinLength"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtDifficulty" />
 
@@ -64,7 +65,7 @@
         style="@android:style/Widget.Material.EditText"
         android:layout_width="@dimen/options_editText_width"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="28dp"
         android:ems="2"
         android:inputType="number"
@@ -77,8 +78,8 @@
         android:id="@+id/txtMaxLength"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/options_label_marginStart"
-        android:layout_marginTop="@dimen/options_label_marginTop"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="32dp"
         android:text="@string/label_maximum_letters"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,12 +90,12 @@
         style="@android:style/Widget.Material.EditText"
         android:layout_width="@dimen/options_editText_width"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:ems="2"
         android:inputType="number"
-        android:maxLength="2"
         android:labelFor="@id/edtxtMaxLength"
+        android:maxLength="2"
         app:layout_constraintStart_toEndOf="@+id/txtMaxLength"
         app:layout_constraintTop_toBottomOf="@+id/edtxtMinLength" />
 
@@ -102,26 +103,25 @@
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginBottom="72dp"
+        android:layout_marginEnd="48dp"
         android:text="@string/button_save"
         android:textAllCaps="true"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        app:layout_constraintStart_toEndOf="@id/edtxtMaxLength"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnCancel" />
 
     <Button
         android:id="@+id/btnCancel"
         style="@android:style/Widget.Material.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginBottom="72dp"
+        android:layout_marginEnd="36dp"
         android:text="@string/button_cancel"
         android:textAllCaps="true"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
-        app:layout_constraintStart_toEndOf="@+id/btnSave"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
