--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="ca.qc.cegep_heritage.mhaley_a03_hangman.MainActivity"
+    tools:layout_editor_absoluteY="73dp"
     tools:showIn="@layout/activity_main">
 
 
@@ -13,25 +14,41 @@
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="192dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="24dp"
         android:text="@string/app_name"
         android:textAllCaps="true"
         android:textAppearance="@android:style/TextAppearance.Material.Display3"
+        app:layout_constraintBottom_toTopOf="@+id/txtSubtitle"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtSubtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="72dp"
+        android:layout_marginEnd="39dp"
+        android:text="@string/subtitle"
+        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
+        app:layout_constraintEnd_toEndOf="@+id/txtTitle"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
 
     <Button
         android:id="@+id/btnPlay"
         style="@android:style/Widget.Material.Button"
         android:layout_width="260dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="208dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="37dp"
         android:text="@string/button_play"
         android:textAllCaps="true"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSubtitle" />
 </android.support.constraint.ConstraintLayout>
