Moved value to dimens

--- a/app/src/main/res/layout-land/activity_options.xml
+++ b/app/src/main/res/layout-land/activity_options.xml
@@ -41,7 +41,7 @@
         android:id="@+id/txtDifficulty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="@dimen/options_label_marginStart"
         android:layout_marginTop="68dp"
         android:text="@string/label_difficulty"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="@dimen/options_label_marginStart"
         android:labelFor="@id/edtxtMinLength"
         android:text="@string/label_minimum_letters"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
@@ -81,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="@dimen/options_label_marginStart"
         android:text="@string/label_maximum_letters"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         app:layout_constraintBaseline_toBaselineOf="@+id/edtxtMaxLength"
